--- a/scss/main.css
+++ b/scss/main.css
@@ -826,7 +826,8 @@ ul.pills {
 
 .related-projects {
   border-top: 0.4em double #A3A7AF;
-  padding-top: 1.5rem; }
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem; }
   @media screen and (min-width: 28rem) {
     .related-projects {
       background: repeating-linear-gradient(90deg, #f4f5f6 0, #f4f5f6 5%, transparent 0, transparent 50%) 0/1rem 1rem, repeating-linear-gradient(180deg, #f4f5f6 0, #f4f5f6 5%, transparent 0, transparent 50%) 0/1rem 1rem; } }
